tests/err03.json.err
Parse error at line 2

001: {
002: 	,
     	^
Expected ID string
